# Parclose

./: .env.example  .gitignore  LICENSE  README.md
agents/: Cargo.toml
agents/examples/: compete.rs  live_compete.rs
agents/src/: agent.rs  anthropic.rs  lib.rs  llm.rs  seal.rs  strategy.rs  types.rs
agents/tests/: agentic_criteria.rs  sealed_flow.rs
contracts/: .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml
contracts/src/: cash_token.rs  crossing_engine.rs  fund_token.rs  lib.rs  sealed_order_book.rs  window_registry.rs
dashboard/: app.js  index.html  styles.css  window.json
enclave/: Cargo.toml
enclave/examples/: dev_signer.rs
enclave/src/: lib.rs  open.rs  sign.rs
seal/: Cargo.toml
seal/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
