[package]
name = "parclose-agents"
version = "0.1.0"
edition = "2021"
description = "Parclose confidential liquidity agents: the perceive -> reason -> act loop that forms a private pricing strategy and submits a sealed order into a crossing window."

[dependencies]
parclose-shared = { path = "../shared" }
# Same odra the shared/enclave crates resolve to, so the Order/U256/Address encodings agree
# byte-for-byte with what the enclave decrypts and the CrossingEngine settles.
odra = { version = "=2.7.2", features = [], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Seals a decided order to the enclave before it is posted on-chain (the encryption client).
parclose-seal = { path = "../seal" }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
# Host-only: the competition harness and the criteria tests clear two competing agents with the
# real uniform-price crossing rule -- exactly what CrossingEngine settles on-chain.
parclose-enclave = { path = "../enclave" }
