[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.2.0", features = [], default-features = false }
odra-modules = { version = "2.2.0", features = [], default-features = false }
parclose-shared = { path = "../shared" }
# Livenet deploy backend (host-only; pulled in only by the `livenet` feature for the deploy bin).
odra-casper-livenet-env = { version = "2.2.0", optional = true }

[features]
default = []
# Enables the Testnet deploy binary (src/bin/deploy.rs).
livenet = ["odra-casper-livenet-env"]

[dev-dependencies]
odra-test = { version = "2.2.0", features = [], default-features = false }
# Test-only: drive settlement with the real enclave clearing rule (host build; not in the Wasm).
parclose-enclave = { path = "../enclave" }

[build-dependencies]
odra-build = { version = "2.2.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.2.0", features = [], default-features = false }

[[bin]]
name = "contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
